kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adcash-webapp-service
  namespace: adcash-webapp
  annotations:
  service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "adcash_webapp_eip.id"
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
  labels:
    app: web-server
spec:
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
